force-app/main/default/objects/commissionSplit__c.object
<CustomObject>
    <description>This object is the split values by employee and by object (Account and Quote Initially)</description>
    <fields>
        <fullName>Commission_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>Commission_Sales_Rep__c</referenceTo>
        <relationshipLabel>Commission Splits</relationshipLabel>
        <relationshipName>Commission_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Quote Document Split Amount</inlineHelpText>
        <label>Quote Document</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Commission Splits</relationshipLabel>
        <relationshipName>Commission_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>cflCustStruct__Sales_Order__c</referenceTo>
        <relationshipLabel>Commission Splits</relationshipLabel>
        <relationshipName>Commission_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_Percent__c</fullName>
        <inlineHelpText>Split Percentage for this user</inlineHelpText>
        <label>Split Percent</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>accountSplit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account that the split is associated with.</inlineHelpText>
        <label>Account Split</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commission Splits</relationshipLabel>
        <relationshipName>Commission_Splits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Commission Split</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Split_Percent__c</columns>
        <columns>Quote_Document__c</columns>
        <columns>accountSplit__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Commission_Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Commission Split Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Splits</pluralLabel>
    <recordTypes>
        <fullName>Account_Split</fullName>
        <active>true</active>
        <description>Account Commission Split</description>
        <label>Account Split</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote_Split</fullName>
        <active>true</active>
        <description>Quote Commission Split</description>
        <label>Quote Split</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Order_Split</fullName>
        <active>true</active>
        <label>Sales Order Split</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>